Cynthia's brand new related work section

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -1478,3 +1478,40 @@ year={1995}
  publisher = {Kluwer Academic Publishers},
  address = {Hingham, MA, USA}
 }
+
+%http://www1.icsi.berkeley.edu/~rueckert/papers/rueckert08experimental.pdf
+article{Ruckert2008,
+author={U. R\"uckert and L. De Raedt},
+year = {2008},
+title={An experimental evaluation of simplicity in rule learning},
+journal={Artificial Intelligence}, 
+volume={172},
+pages={19--28}
+}
+
+@inproceedings{Frank1998,
+ author = {Frank, Eibe and Witten, Ian H.},
+ title = {Generating Accurate Rule Sets Without Global Optimization},
+ booktitle = {Proceedings of the Fifteenth International Conference on Machine Learning},
+ series = {ICML '98},
+ year = {1998},
+  pages = {144--151}
+ } 
+
+article{ClarkNiblett1989,
+author={P. Clark and T. Niblett},
+year={1989},
+title={The CN2 induction algorithm},
+journal={Machine Learning},
+volume={3},
+issue={4},
+pages={261--283}
+}
+
+inproceedings{Michalski1969,
+author={R.S. Michalski},
+year={1969},
+title={On the quasi-minimal solution of the general covering problem},
+booktitle={Proceedings of the Fifth International Symposium on Information Processing},
+pages={125--128}
+}
