Some edits for citations

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -447,7 +447,7 @@ booktitle={Proceedings of Artificial Intelligence and Statistics ({AISTATS})},
 year={2015}
 }
 
-@article{WangRu16,
+@article{WangRu15CFRL,
 title={Causal Falling Rule Lists},
 __author={Fulton Wang and Cynthia Rudin},
 author={F. Wang and C. Rudin},
@@ -1498,7 +1498,7 @@ pages={19--28}
   pages = {144--151}
  } 
 
-article{ClarkNiblett1989,
+@article{ClarkNiblett1989,
 author={P. Clark and T. Niblett},
 year={1989},
 title={The CN2 induction algorithm},
@@ -1508,7 +1508,7 @@ issue={4},
 pages={261--283}
 }
 
-inproceedings{Michalski1969,
+@inproceedings{Michalski1969,
 author={R.S. Michalski},
 year={1969},
 title={On the quasi-minimal solution of the general covering problem},
