--- a/paper/sections/related_work.tex
+++ b/paper/sections/related_work.tex
@@ -14,7 +14,8 @@ Tight bounds, on the other hand, have been developed for the (immense) literatur
 
 Some of our bounds, including the minimum support bound (\S\ref{sec:lb-support}, Theorem~\ref{thm:min-capture}), come from \citep{RudinEr15}, who provide flexible mixed-integer programming formulations uses the same objective as we do; MIP solvers in general cannot compete with the speed of CORELS.
 
-CORELS depends on pre-mined rules. We use the FP-Growth algorithm here \cite{FP}, but the literature on association rule mining is huge, and any method for rule mining could be reasonably substituted.
+CORELS depends on pre-mined rules, which we obtain in this work via straightforward enumeration.
+We use the FP-Growth algorithm here \cite{FP}, but the literature on association rule mining is huge, and any method for rule mining could be reasonably substituted.
 
 COREL's main use is for producing interpretable predictive models. There is a growing interest in interpretable (transparent, comprehensible) models because of their societal importance (see \citep{ruping2006learning,bratko1997machine,dawes1979robust,VellidoEtAl12,Giraud98,Holte93,Schmueli10,Huysmans11,Freitas14}). There are now regulations on algorithmic decision-making in the European Union on the ``right to an explanation" \citep{Goodman2016EU} that would legally require interpretability of predictions. There is work in both the DNF literature \citep{Ruckert2008} and decision tree literature \cite{GarofalakisHyRaSh00} on building interpretable models. Interpretable models must be so sparse that they need to be heavily optimized; heuristics tend to produce either inaccurate or non-sparse models.
 
