Comment out statement about Rijnbeek bound

--- a/paper/sections/related_work.tex
+++ b/paper/sections/related_work.tex
@@ -10,7 +10,9 @@ are grown in a top-down greedy way. Because of this, the authors of the Bayesian
 The 1995 RIPPER algorithm \citep{ripper} is similar to the Bayesian tree methods in that it grows, prunes, and then locally optimizes.
 Bayesian rule lists tend to be more successful escaping local minima because of their smaller search space and methods of exploring the search space, which is why we uses lists, but the tightest bounds for the Bayesian lists (namely those of \citet{YangRuSe16} whose work we build from), are not nearly as tight as those of CORELS.
 
-Tight bounds, on the other hand, have been developed for the (immense) literature on building disjunctive normal form (DNF) models. A good example of this is the work of ~\citet{Rijnbeek10} which learns DNF's using bounds similar to our equivalent points bound~(\S\ref{sec:identical}) to prune the search space.  For models of a given size, since the class of DNF's is a proper subset of decision lists, our framework can be restricted to learn optimal DNF's. The field of DNF learning includes work from the fields of rule learning/induction (e.g., early algorithms \citep{Michalski1969,ClarkNiblett1989,Frank1998}) and associative classification \citep{Vanhoof10}. Most papers in these fields aim to carefully guide the search through the space of models. If we were to place a restriction on our code to learn DNF's, which would require restricting predictions within the list to the positive class only, we could potentially use methods from rule learning and associative classification to help order CORELS' queue, which would in turn help us eliminate parts of the search space faster. 
+Tight bounds, on the other hand, have been developed for the (immense) literature on building disjunctive normal form (DNF) models. A good example of this is the work of \citet{Rijnbeek10}.
+%which learns DNF's using bounds similar to our equivalent points bound~(\S\ref{sec:identical}) to prune %the search space.
+For models of a given size, since the class of DNF's is a proper subset of decision lists, our framework can be restricted to learn optimal DNF's. The field of DNF learning includes work from the fields of rule learning/induction (e.g., early algorithms \citep{Michalski1969,ClarkNiblett1989,Frank1998}) and associative classification \citep{Vanhoof10}. Most papers in these fields aim to carefully guide the search through the space of models. If we were to place a restriction on our code to learn DNF's, which would require restricting predictions within the list to the positive class only, we could potentially use methods from rule learning and associative classification to help order CORELS' queue, which would in turn help us eliminate parts of the search space faster. 
 
 Some of our bounds, including the minimum support bound (\S\ref{sec:lb-support}, Theorem~\ref{thm:min-capture}), come from \citep{RudinEr15}, who provide flexible mixed-integer programming formulations uses the same objective as we do; MIP solvers in general cannot compete with the speed of CORELS.
 
