Fix Ruckert citation

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -1480,7 +1480,7 @@ year={1995}
 }
 
 %http://www1.icsi.berkeley.edu/~rueckert/papers/rueckert08experimental.pdf
-article{Ruckert2008,
+@article{Ruckert2008,
 author={U. R\"uckert and L. De Raedt},
 year = {2008},
 title={An experimental evaluation of simplicity in rule learning},
