Update Goodman ref to ICML workshop

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -1434,14 +1434,12 @@ year = {2007}
     year = {2011}
 }
 
-@article{goodman2016eu,
-__Author = {Goodman, Bryce and Flaxman, Seth},
-Author = {Goodman, B. and Flaxman, S.},
-	Journal = {Preprint at arXiv:1606.08813},
-	Title = {{EU} regulations on algorithmic decision-making and a ``right to explanation"},
-	Year = {2016},
-	month = jun
-}
+@inproceedings{goodman2016eu,
+    __author = {Goodman, Bryce and Flaxman, Seth},
+    author = {Goodman, B. and Flaxman, S.},
+	booktitle = {ICML Workshop on Human Interpretability in Machine Learning (WHI)},
+	title = {{European Union} regulations on algorithmic decision-making and a ``right to explanation''},
+Year = {2016}}
 
 @inproceedings{ripper,
 __author={William W. Cohen},
